--- a/Documentation/latex/files.tex
+++ b/Documentation/latex/files.tex
@@ -9,6 +9,7 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{main_8c}{main.\+c}} \\*Main фунция }{\pageref{main_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_signal_receive_handler_8c}{Signal\+Receive\+Handler.\+c}} \\*Функции, обеспечивающие приём АРСФ пакетов (обнаружение пакетов, регистрация и обработка ложных срабатываний) }{\pageref{_signal_receive_handler_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_s_p_i__lib_8c}{SPI\+\_\+lib.\+c}} \\*Функции для работы с SPI }{\pageref{_s_p_i__lib_8c}}{}
+\item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_t_i_m__lib_8c}{TIM\+\_\+lib.\+c}} \\*Функции для работы с прерываниями таймеров }{\pageref{_t_i_m__lib_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_u_a_r_t__lib_8c}{UART\+\_\+lib.\+c}} \\*Функции для работы с USART }{\pageref{_u_a_r_t__lib_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_w_d_t__lib_8c}{WDT\+\_\+lib.\+c}} \\*Функции для работы со сторожевым таймером IWDT }{\pageref{_w_d_t__lib_8c}}{}
 \end{DoxyCompactList}
