--- a/Documentation/latex/refman.tex
+++ b/Documentation/latex/refman.tex
@@ -223,6 +223,7 @@
 \input{main_8c}
 \input{_signal_receive_handler_8c}
 \input{_s_p_i__lib_8c}
+\input{_t_i_m__lib_8c}
 \input{_u_a_r_t__lib_8c}
 \input{_w_d_t__lib_8c}
 %--- End generated contents ---
