--- a/Documentation/latex/files.tex
+++ b/Documentation/latex/files.tex
@@ -4,9 +4,11 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_a_m_p_8c}{AMP.\+c}} \\*Функции для вычисления амплитуды входного сигнала }{\pageref{_a_m_p_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_d_a_c__lib_8c}{DAC\+\_\+lib.\+c}} \\*Функции для работы с ЦАП }{\pageref{_d_a_c__lib_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_filter__lib_8c}{Filter\+\_\+lib.\+c}} \\*Функции для фильтрации паразитных частот, содержащихся во входном сигнале }{\pageref{_filter__lib_8c}}{}
+\item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_f_m_8c}{FM.\+c}} \\*Обработка АРС сигнала }{\pageref{_f_m_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{font__lib_8c}{font\+\_\+lib.\+c}} \\*Функции для работы со шрифтом }{\pageref{font__lib_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_l_c_d__lib_8c}{LCD\+\_\+lib.\+c}} \\*Функции для работы с LCD экраном }{\pageref{_l_c_d__lib_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{main_8c}{main.\+c}} \\*Main фунция }{\pageref{main_8c}}{}
+\item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_p_m_8c}{PM.\+c}} \\*Обработка АРСФ пакетов }{\pageref{_p_m_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_signal_receive_handler_8c}{Signal\+Receive\+Handler.\+c}} \\*Функции, обеспечивающие приём АРСФ пакетов (обнаружение пакетов, регистрация и обработка ложных срабатываний) }{\pageref{_signal_receive_handler_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_s_p_i__lib_8c}{SPI\+\_\+lib.\+c}} \\*Функции для работы с SPI }{\pageref{_s_p_i__lib_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_t_i_m__lib_8c}{TIM\+\_\+lib.\+c}} \\*Функции для работы с прерываниями таймеров }{\pageref{_t_i_m__lib_8c}}{}
