--- a/Documentation/latex/refman.tex
+++ b/Documentation/latex/refman.tex
@@ -218,9 +218,11 @@
 \input{_a_m_p_8c}
 \input{_d_a_c__lib_8c}
 \input{_filter__lib_8c}
+\input{_f_m_8c}
 \input{font__lib_8c}
 \input{_l_c_d__lib_8c}
 \input{main_8c}
+\input{_p_m_8c}
 \input{_signal_receive_handler_8c}
 \input{_s_p_i__lib_8c}
 \input{_t_i_m__lib_8c}
